--- a/conteudo.html
+++ b/conteudo.html
@@ -100,8 +100,7 @@
                             protagonista na biodiversidade mundial. </p>
                         <p>Os seres humanos e as plantas são organismos vivos, porém há grandes diferenças entre eles,
                             como o tamanho, o tempo de vida e a alimentação. Observe a figura: </p>
-                        <div class="moldurapg1">
-                            <figure>
+                            <figure class="only-print">
                                 <img src="img/assets/pg1/figura1.png" class="img-fluid d-block m-auto figborda"
                                     data-aos="zoom-in"
                                     alt="A imagem mostra três crianças observando com uma lupa as plantas que estão próximas a uma árvore.">
@@ -110,7 +109,15 @@
                                     Fonte: Freepik (s. d.)
                                 </figcaption>
                             </figure>
-                        </div>
+                            <figure class="no-print">
+                                <img src="img/assets/pg1/figura_1.png" class="img-fluid d-block m-auto"
+                                    data-aos="zoom-in"
+                                    alt="A imagem mostra três crianças observando com uma lupa as plantas que estão próximas a uma árvore.">
+                                <figcaption>
+                                    Figura 1 – Crianças curiosas com plantas <br>
+                                    Fonte: Freepik (s. d.)
+                                </figcaption>
+                            </figure>
                         <p>Você concorda que é mais fácil mencionar as diferenças entre as crianças e as plantas do que
                             as semelhanças entre elas? </p>
                         <p class="no-print">Entenda melhor a respeito da biodiversidade no vídeo a seguir: </p>
@@ -372,8 +379,7 @@
                             e até mesmo na família biológica, percebemos que existem diferenças entre as pessoas, como a
                             cor
                             do cabelo e da pele, a altura e a propensão a doenças.</p>
-                        <div class="moldurapg1">
-                            <figure>
+                            <figure class="only-print">
                                 <img src="img/assets/pg1/figura2.png" class="img-fluid d-block m-auto figborda"
                                     data-aos="zoom-in"
                                     alt="A imagem mostra doze asas de borboletas colocadas lado a lado, comparando seus diferentes tipos de cores e padrões geométricos.">
@@ -382,7 +388,16 @@
                                     Fonte: Joint Genome Institute (c1997-2023)
                                 </figcaption>
                             </figure>
-                        </div>
+                            <figure class="no-print">
+                                <img src="img/assets/pg1/figura_2.png" class="img-fluid d-block m-auto"
+                                    data-aos="zoom-in"
+                                    alt="A imagem mostra doze asas de borboletas colocadas lado a lado, comparando seus diferentes tipos de cores e padrões geométricos.">
+                                <figcaption>
+                                    Figura 2 – Diferentes padrões de cores nas asas das borboletas <br>
+                                    Fonte: Joint Genome Institute (c1997-2023)
+                                </figcaption>
+                            </figure>
+                            <figure>
                         <p>As populações dos outros seres vivos também funcionam assim. Podemos observar, por exemplo,
                             as diferenças que existem entre nossos animais de estimação. Todos os gatos fazem parte da
                             mesma espécie, entretanto, a cor dos pelos, o tamanho, a personalidade e outros atributos
@@ -530,8 +545,7 @@
                             sentidos até os dias de hoje. A contaminação da lama causou a morte de 14 toneladas de
                             peixes,
                             deixando várias famílias sem fonte de renda.</p>
-                        <div class="moldurapg2">
-                            <figure>
+                            <figure class="only-print">
                                 <img src="img/assets/pg2/figura3.png" class="img-fluid d-block m-auto figborda"
                                     data-aos="zoom-in"
                                     alt="A imagem mostra a data do desastre de Mariana, 5 de novembro de 2015, e os danos causados: uma caveira representa as 19 pessoas mortas; uma árvore representa a degradação ambiental de 240,88 hectares de mata atlântica; 3 ocas representam as 3 reservas indígenas atingidas; a carcaça de um peixe representa as 29.300 carcaças de peixes coletadas, que correspondem a 14 toneladas de peixes mortos.">
@@ -540,7 +554,15 @@
                                     Fonte: Brasil (s. d.)
                                 </figcaption>
                             </figure>
-                        </div>
+                            <figure class="no-print">
+                                <img src="img/assets/pg2/figura_3.png" class="img-fluid d-block m-auto"
+                                    data-aos="zoom-in"
+                                    alt="A imagem mostra a data do desastre de Mariana, 5 de novembro de 2015, e os danos causados: uma caveira representa as 19 pessoas mortas; uma árvore representa a degradação ambiental de 240,88 hectares de mata atlântica; 3 ocas representam as 3 reservas indígenas atingidas; a carcaça de um peixe representa as 29.300 carcaças de peixes coletadas, que correspondem a 14 toneladas de peixes mortos.">
+                                <figcaption>
+                                    Figura 3 – Dados do desastre de Mariana <br>
+                                    Fonte: Brasil (s. d.)
+                                </figcaption>
+                            </figure>
                     </div>
                 </div>
                 <div class="bloco3-pg2">
@@ -801,8 +823,7 @@
                         </figcaption>
                         <p>A imagem a seguir mostra uma teia alimentar, que representa as relações energéticas entre
                             cadeias alimentares:</p>
-                        <div class="moldurapg2">
-                            <figure>
+                            <figure class="only-print">
                                 <img src="img/assets/pg2/figura4.png" class="img-fluid d-block m-auto"
                                     data-aos="zoom-in" alt="">
                                 <figcaption>
@@ -810,7 +831,14 @@
                                     Fonte: Sesc EAD EJA (2023)
                                 </figcaption>
                             </figure>
-                        </div>
+                            <figure class="no-print">
+                                <img src="img/assets/pg2/figura_4.png" class="img-fluid d-block m-auto"
+                                    data-aos="zoom-in" alt="">
+                                <figcaption>
+                                    Figura 4 – Teia alimentar <br>
+                                    Fonte: Sesc EAD EJA (2023)
+                                </figcaption>
+                            </figure>
                         <p>A imagem ilustra uma teia alimentar, na qual os frutos de uma árvore servem de alimento para
                             um pássaro e suas folhas para uma lagarta. A lagarta serve de alimento para o pássaro e o
                             pássaro, em seguida, poderá ser predado por uma ave de rapina ou por uma serpente. A lagarta
@@ -821,8 +849,7 @@
                                 data-bs-original-title="Níveis de nutrição a que pertence um indivíduo, os quais indicam o fluxo de energia entre os seres vivos presentes, na cadeia ou na teia alimentar. ">
                                 níveis tróficos </button> que os seres vivos ocupam nessa teia alimentar.
                         </p>
-                        <div class="moldurapg2">
-                            <figure>
+                            <figure class="only-print">
                                 <img src="img/assets/pg2/figura5.png" class="img-fluid d-block m-auto"
                                     data-aos="zoom-in" alt="">
                                 <figcaption>
@@ -830,7 +857,14 @@
                                     Fonte: Sesc EAD EJA (2023)
                                 </figcaption>
                             </figure>
-                        </div>
+                            <figure class="no-print">
+                                <img src="img/assets/pg2/figura_5.png" class="img-fluid d-block m-auto"
+                                    data-aos="zoom-in" alt="">
+                                <figcaption>
+                                    Figura 5 – Níveis tróficos <br>
+                                    Fonte: Sesc EAD EJA (2023)
+                                </figcaption>
+                            </figure>
                         <p> Em teias alimentares não há fluxo energético em apenas uma direção (unidirecional), como
                             ocorre em cadeias alimentares. Nas teias, o mesmo ser vivo pode ocupar mais de um nível
                             trófico e níveis tróficos diferentes, com exceção do produtor.</p>
@@ -897,7 +931,7 @@
                             longo prazo. O caso serve como um alerta para a importância da prevenção de acidentes
                             ambientais
                             e para a necessidade de <b>políticas públicas</b> efetivas de gestão ambiental.</p>
-                        <div class="moldurapg2">
+                       
                             <figure>
                                 <img src="img/assets/pg2/figura6.png" class="img-fluid d-block m-auto"
                                     data-aos="zoom-in"
@@ -909,7 +943,6 @@
                                     Fonte: Biló <i>apud</i> G1 (2015)
                                 </figcaption>
                             </figure>
-                        </div>
                     </div><!-- div que fecha container -->
                     <div class="bloco3-paralax1pg2"></div>
                 </div><!-- div que fecha bloco 3 -->
