--- a/conteudo.html
+++ b/conteudo.html
@@ -421,7 +421,7 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <div class="row">
+                    <div class="row rows_padding">
                         <div class="col-12 col-md-4 mt-3 mb-3 cor-caatinga">
                             <div class="game-titulo">
                                 <p>Caatinga</p>
@@ -448,7 +448,7 @@
                     </div>
                     </div>
                 </div>
-                <div class="col-10 align-self-start d-block mt-5 m-auto">
+                <div class="col-10 align-self-start d-block mt-5 m-auto d-none d-md-block">
                     <div class="mapa_brasil">
                         <div class="mapa-bolinha card1 d-none">
                             <img src="objeto/biomas/thumb/mandacaru.jpg" alt="">                                                        
