--- a/conteudo.html
+++ b/conteudo.html
@@ -96,6 +96,7 @@
                             entre si, gerando o que chamamos de biodiversidade.</p>
                     </div><!-- div que fecha container -->
                 </div><!-- div que fecha bloco 1 -->
+
                 <div class="bloco2-pg1">
                     <div class="container">
                         <p>A biodiversidade, portanto, é a diversidade de formas que a vida pode assumir. O Brasil é
@@ -175,7 +176,7 @@
                                 class="rellax rellax-1 no-print" data-rellax-speed="2"></div>
                         <div data-aos="fade-down-right"><img src="img/assets/pg1/parallax/grafico_dir2.png" alt=""
                                 class="rellax rellax-2 no-print" data-rellax-speed="2"></div>
-                        <div class="painel">
+                        <div class="painel d-none d-sm-block">
                             <button type="button" class="bt-amazonia" data-bs-toggle="modal"
                                 data-bs-target="#bt-amazonia"></button>
                             <button type="button" class="bt-cerrado" data-bs-toggle="modal"
@@ -188,6 +189,26 @@
                                 data-bs-target="#bt-pampa"></button>
                             <button type="button" class="bt-mata" data-bs-toggle="modal"
                                 data-bs-target="#bt-mata"></button>
+                        </div>
+                        <div class="row d-block d-sm-none no-print" aria-hidden="true">
+                            <div class="col-xs-12">
+                                <button type="button" class="bt-amazonia_mobile" data-bs-toggle="modal" data-bs-target="#bt-amazonia"></button>
+                            </div>
+                            <div class="col-xs-12">
+                                <button type="button" class="bt-cerrado_mobile" data-bs-toggle="modal" data-bs-target="#bt-cerrado"></button>
+                            </div>
+                            <div class="col-xs-12">
+                                <button type="button" class="bt-pantanal_mobile" data-bs-toggle="modal" data-bs-target="#bt-pantanal"></button>
+                            </div>
+                            <div class="col-xs-12">
+                                <button type="button" class="bt-caatinga_mobile" data-bs-toggle="modal" data-bs-target="#bt-caatinga"></button>
+                            </div>
+                            <div class="col-xs-12">
+                                <button type="button" class="bt-pampa_mobile" data-bs-toggle="modal" data-bs-target="#bt-pampa"></button>
+                            </div>
+                            <div class="col-xs-12">
+                                <button type="button" class="bt-mata_mobile" data-bs-toggle="modal" data-bs-target="#bt-mata"></button>
+                            </div>
                         </div>
                         <!-- <div class="painel2">
                             <button type="button" class="bt-amazonia2" data-bs-toggle="modal"
@@ -206,7 +227,7 @@
                         <div class="modal fade" id="bt-amazonia" tabindex="-1" aria-labelledby="bt-amazonia"
                             aria-hidden="true" style="display: none;">
                             <div class="modal-dialog modal-lg modal-dialog-centered">
-                                <div class="modal-content">
+                                <div class="modal-content no-print">
                                     <div class="modal-header1">
                                         <h4 class="modal-title" id="bt-amazonia"></h4>
 
@@ -227,7 +248,7 @@
                         <div class="modal fade" id="bt-cerrado" tabindex="-1" aria-labelledby="bt-cerrado"
                             aria-hidden="true" style="display: none;">
                             <div class="modal-dialog modal-lg modal-dialog-centered">
-                                <div class="modal-content">
+                                <div class="modal-content no-print">
                                     <div class="modal-header2">
                                         <h4 class="modal-title" id="bt-cerrado"></h4>
                                     </div>
@@ -246,7 +267,7 @@
                         <div class="modal fade" id="bt-caatinga" tabindex="-1" aria-labelledby="bt-caatinga"
                             aria-hidden="true" style="display: none;">
                             <div class="modal-dialog modal-lg modal-dialog-centered">
-                                <div class="modal-content">
+                                <div class="modal-content no-print">
                                     <div class="modal-header3">
                                         <h4 class="modal-title" id="bt-caatinga"></h4>
 
@@ -267,7 +288,7 @@
                         <div class="modal fade" id="bt-pantanal" tabindex="-1" aria-labelledby="bt-pantanal"
                             aria-hidden="true" style="display: none;">
                             <div class="modal-dialog modal-lg modal-dialog-centered">
-                                <div class="modal-content">
+                                <div class="modal-content no-print">
                                     <div class="modal-header4">
                                         <h4 class="modal-title" id="bt-pantanal"></h4>
 
@@ -287,7 +308,7 @@
                         <div class="modal fade" id="bt-mata" tabindex="-1" aria-labelledby="bt-mata" aria-hidden="true"
                             style="display: none;">
                             <div class="modal-dialog modal-lg modal-dialog-centered">
-                                <div class="modal-content">
+                                <div class="modal-content no-print">
                                     <div class="modal-header5">
                                         <h4 class="modal-title" id="bt-mata"> </h4>
 
@@ -308,7 +329,7 @@
                         <div class="modal fade" id="bt-pampa" tabindex="-1" aria-labelledby="bt-pampa"
                             aria-hidden="true" style="display: none;">
                             <div class="modal-dialog modal-lg modal-dialog-centered">
-                                <div class="modal-content">
+                                <div class="modal-content no-print">
                                     <div class="modal-header6">
                                         <h4 class="modal-title" id="bt-pampa"></h4>
 
@@ -326,7 +347,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="only-print">
+                        <div class="only-print">
                             <h4>Amazônia</h4>
                             <p> 49%</p>
                             <p>Abrange a maior floresta tropical do mundo e contém 20% da disponibilidade mundial de
@@ -351,8 +372,8 @@
                             <p> 2%</p>
                             <p>Caracterizado por clima chuvoso, sem período seco e com temperaturas negativas no
                                 inverno.</p>
-                        </div> -->
-                        <p>Como você pôde ver, cada bioma tem características bem distintas. Em qual bioma você vive?
+                        </div>
+                        <p class="paragrafo-mapa">Como você pôde ver, cada bioma tem características bem distintas. Em qual bioma você vive?
                             Quais são as plantas e os animais típicos da sua região? Anote e compartilhe com seus
                             colegas no
                             presencial. Quem sabe você conhece algum ser vivo da localidade e que seus colegas
@@ -746,16 +767,18 @@
                         </p>
                         <img src="img/assets/pg2/img_dir.png" alt="" class="rellax rellax-7 no-print"
                             data-rellax-speed="2">
-                        <div class="col-sm-12 col-xs-12 no-print">
-                            <div class="flip-card_fig">
-                                <div class="flip-card-inner">
-                                    <div class="flip-card-front">
-                                        <img src="img/assets/pg2/desastre.gif"
-                                            class="img-fluid d-block m-auto figbordagif" data-aos="zoom-in" alt="">
-                                    </div>
-                                    <div class="flip-card-back">
-                                        <img src="img/assets/pg2/percurso.gif"
-                                            class="img-fluid d-block m-auto figbordagif" data-aos="zoom-in" alt="">
+                        <div class="row div-flip">
+                            <div class="col-sm-12 col-xs-12 no-print">
+                                <div class="flip-card_fig">
+                                    <div class="flip-card-inner">
+                                        <div class="flip-card-front">
+                                            <img src="img/assets/pg2/desastre.gif"
+                                                class="img-fluid d-block m-auto figbordagif" data-aos="zoom-in" alt="">
+                                        </div>
+                                        <div class="flip-card-back">
+                                            <img src="img/assets/pg2/percurso.gif"
+                                                class="img-fluid d-block m-auto figbordagif" data-aos="zoom-in" alt="">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -826,7 +849,22 @@
                                 <img src="assets/objetos/alta/quadro_04.png" class="img-fluid d-block m-auto" alt="">
                             </figure>
                         </div>
-                        <div id="carouselId2" class="carousel slide sesc no-print" data-bs-ride="">
+                        <div class="d-block d-sm-none">
+                            <br>
+                            <figure>
+                                <img src="assets/objetos/alta/quadro_01.png" class="img-fluid d-block m-auto" alt="">
+                            </figure>
+                            <figure>
+                                <img src="assets/objetos/alta/quadro_02.png" class="img-fluid d-block m-auto" alt="">
+                            </figure>
+                            <figure>
+                                <img src="assets/objetos/alta/quadro_03.png" class="img-fluid d-block m-auto" alt="">
+                            </figure>
+                            <figure>
+                                <img src="assets/objetos/alta/quadro_04.png" class="img-fluid d-block m-auto" alt="">
+                            </figure>
+                        </div>
+                        <div id="carouselId2" class="carousel slide sesc no-print d-none d-sm-block" data-bs-ride="">
                             <div class="carousel-inner" role="listbox">
                                 <div class="carousel-item active">
                                     <img src="assets/objetos/web/quadro_01.png" class="img-fluid d-block m-auto"
@@ -999,12 +1037,57 @@
                         <p>No quadro a seguir você encontra outros exemplos que podem contribuir para a sua compreensão
                             desse tema:</p>
                         <div class="table-responsive">
-                            <table class="sesc w-100">
+                            <table class="sesc w-100 no-print">
                                 <tbody>
                                     <tr class="text-center">
-                                        <th colspan="1">Classificação</th>
-                                        <th colspan="1">Descrição</th>
-                                        <th colspan="1">Exemplo</th>
+                                        <th>Classificação</th>
+                                        <th>Descrição</th>
+                                        <th>Exemplo</th>
+                                    </tr>
+                                    <tr>
+                                        <td>Produtor</td>
+                                        <td>Um ser vivo <b>autótrofo</b> (planta ou alga que produz seu próprio alimento
+                                            a
+                                            partir da fotossíntese)</td>
+                                        <td>Vegetal</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Consumidor primário </td>
+                                        <td>Um ser vivo <b>heterótrofo</b>, que se alimenta do produtor</td>
+                                        <td>Gafanhoto</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Consumidor secundário</td>
+                                        <td>O organismo que come ou deriva nutrientes do consumidor de primeira ordem
+                                        </td>
+                                        <td>Sapo</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Consumidor terciário</td>
+                                        <td>O organismo que come ou deriva nutrientes do consumidor de segunda ordem
+                                        </td>
+                                        <td>Cobra</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Consumidor quaternário</td>
+                                        <td>Os seres que se alimentam do consumidor terciário, pois algumas cadeias
+                                            alimentares têm níveis adicionais</td>
+                                        <td>Gavião</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Decompositores </td>
+                                        <td>Um organismo, como bactérias e fungos, que decompõe os organismos mortos e
+                                            seus resíduos e vira adubo para o solo</td>
+                                        <td>Fungos e bactérias</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <table class="sesc w-100 only-print" aria-hidden="true">
+                                <tbody>
+                                    <tr class="text-center">
+                                        <td>Classificação</td>
+                                        <td>Descrição</td>
+                                        <td>Exemplo</td>
                                     </tr>
                                     <tr>
                                         <td>Produtor</td>
@@ -1487,7 +1570,7 @@
                             transporta nutrientes, oxigênio e gás carbônico. A água volta para o ambiente pela
                             respiração e
                             transpiração, e também pelas fezes e urina.</p>
-                        <p>Por fim, podemos refletir sobre como o ciclo da água também foi significativamente afetado
+                        <p class="paragrafo-grama">Por fim, podemos refletir sobre como o ciclo da água também foi significativamente afetado
                             pelo
                             acidente com a lama tóxica liberada pelo rompimento da barragem de minério. O acidente
                             impactou
@@ -1497,13 +1580,12 @@
                             região.</p>
 
                     </div>
-                    <div class="bloco3-paralax1pg3"></div>
                 </div>
-
+                <div class="bloco3-paralax1pg3"></div>
                 <div class="bloco3-pg3">
                     <div class="container estilo3pg3">
                         <h3>Encerramento</h3>
-                        <div class="row">
+                        <div class="row bloco3-encerramento">
                             <div class="col-md-6 col-lg-6 col-xs-12	col-sm-12 align-self-center justify-content-center">
                                 <figure>
                                     <img src="img/assets/pg3/figura7.png" class="img-fluid d-block fim m-auto"
@@ -1557,7 +1639,7 @@
                                     não é um evento único, mas sim um processo em constante evolução.</p>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row bloco3-encerramento">
                             <div class="col-md-6 col-lg-6 col-xs-12	col-sm-12 align-self-center justify-content-center margem">
                                 <p> Então, frisamos novamente que é a partir da educação ambiental e da disseminação de
                                     informações
