--- a/index.html
+++ b/index.html
@@ -36,14 +36,11 @@
      
     <div class="backdrop" aria-hidden="true">
       <div class="modal-intro">
-        <p>Olá! Antes de começar, assista ao vídeo introdutório sobre o módulo a seguir.</p>
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="ytb embed-responsive-item" src=""
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
+        <p class="no-print">Olá! Antes de começar, assista ao vídeo introdutório sobre o módulo a seguir.</p>
+        <div class="embed-responsive embed-responsive-16by9 no-print">
+          <iframe class="ytb embed-responsive-item" src="https://www.youtube.com/embed/YsaNFqkHcLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
-
+        <p class="visually-hidden print">Olá, estudantes! Bem-vindos ao nosso material que trata da biodiversidade e da organização da vida na Terra. A vida surgiu há bilhões de anos e passou por incontáveis mudanças e adaptações, permitindo que hoje ela ocupe praticamente todos os lugares do nosso planeta. No Brasil, a diversidade da vida é imensa! É um dos países com megadiversidade de seres vivos. Neste módulo, vamos entender o impacto de desastres ambientais na biodiversidade, analisando a tragédia de Mariana, um município de Minas Gerais. Por fim, vamos estudar o nosso papel na preservação da biodiversidade e do planeta Terra!</p>
         <div class="footer">
           <button class="botao-fechar">
             Fechar
