--- a/conteudo.html
+++ b/conteudo.html
@@ -628,7 +628,7 @@
                         <h3>Relembrando a seleção natural</h3>
                         <p> Para entender por que cada região tem animais e vegetação representativos, precisamos
                             relembrar
-                            o que foi estudado no módulo anterior a respeito de seleção natural.</p>
+                            o que foi estudado a respeito de seleção natural.</p>
                         <p> As relações de parentesco fazem com que indivíduos de uma mesma espécie sejam muito
                             parecidos.
                             Os filhos são mais semelhantes aos pais biológicos do que a parentes distantes. Em uma
